# practice_vision

./: .gitignore  CMakeLists.txt  README.md  bfilter.py  main.py
config/: my_conf.toml  vit_cifar.toml  vit_imagenet.toml
ex_01_image_formation/: image_formation.html  image_formation.py
ex_02-1_sfm/: sfm.py
ex_02-2_stereo/: stereo.py  stereo_batch_provider.py
pl_template/callbacks/: my_printing_callback.py  scalar_tb_callback.py
pl_template/utils/: utils.py
project_name/datasets/: __init__.py  cifar.py  dataset1.py  imagenet.py
project_name/modules/: __init__.py  net1.py  vit.py
project_name/pl_modules/: classification.py
scripts/: train.py
src/: mono_vo.cpp
